# bevy_voxel_game

./: Cargo.toml
assets/: world_params.ron
assets/icons/: AppIcon.icns
assets/shaders/: compass.wgsl
src/: environment.rs  fly_controller.rs  lib.rs  loading.rs  main.rs  voxel.rs
src/ui/: compass.rs  debug.rs  instrument.rs  mod.rs
